--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
         </div>
 
         <div class="col-sm-2" style="margin-left: 20px;margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
+          <div class="card" style="width: 17rem; m-auto">
             <img src="/img/supernatural.jfif" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Supernatural<br></h5>
+              <h5 class="card-title">Supernatural</h5>
               <p class="card-text"></p>
             </div>
             <ul class="list-group list-group-flush">
@@ -172,183 +172,11 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="container-fluid col-11 m-auto">
-      <div class="row">
         <div class="col-sm-2" style="margin-left: 20px; margin-top: 10px">
           <div class="card" style="width: 13rem; m-auto">
             <img src="/img/HTWM.jfif" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">How to Get Away with Murder</h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2" style="margin-left: 20px;margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto;">
-            <img src="/img/BB2.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Breaking bad<br><br></h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2" style="margin-left: 20px;margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/the good doctor.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">The Good Doctor<br><br></h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2" style="margin-left: 20px; margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/lost2.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Lost<br><br></h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-2" style="margin-left: 20px;margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/supernatural.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Supernatural<br></h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid col-11 m-auto">
-      <div class="row">
-        <div class="col-sm-2" style="margin-left: 20px; margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/HTWM.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">How to Get Away with Murder</h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2" style="margin-left: 20px;margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto;">
-            <img src="/img/BB2.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Breaking bad<br><br></h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2" style="margin-left: 20px;margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/the good doctor.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">The Good Doctor<br><br></h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2" style="margin-left: 20px; margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/lost2.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Lost<br><br></h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-2" style="margin-left: 20px;margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/supernatural.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Supernatural<br></h5>
               <p class="card-text"></p>
             </div>
             <ul class="list-group list-group-flush">
@@ -364,18 +192,15 @@
         </div>
       </div>
       </main>
-      <footer>
-        <nav class="navbar col-12 m-auto navbar-dark bg-dark">
-          <div class="container-fluid">
-            <input type="button" class="btn btn-warning col-7 m-auto d-flex justify-content-center" value="NETFLIX"
-              onclick="window.open('https://https://www.netflix.com/br/','_blank')">
-            <input type="button" class="btn btn-warning col-7 m-auto mt-2 d-flex justify-content-center"
-              value="PRIMEVIDEO"
-              onclick="window.open('https://www.primevideo.com/?_encoding=UTF8&language=pt_br','_blank')">
-          </div>
-        </nav>
-      </footer>
+    </div>
+    <footer class="col-12 navbar-dark bg-dark">
+      <input type="button" class="btn btn-warning col-4 m-auto mt-3 d-flex justify-content-center" value="NETFLIX"
+        onclick="window.open('https://https://www.netflix.com/br/','_blank')" style="padding: 10px;">
+      <input type="button" class="btn btn-warning col-4 m-auto mt-3 d-flex justify-content-center" value="PRIMEVIDEO"
+        onclick="window.open('https://www.primevideo.com/?_encoding=UTF8 language=pt_br','_blank')" padding: 10px;">
+      </div>
+    </footer>
 </body>
-</nav>
+
 
 </html>
