--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_br">
 
 <head>
   <meta charset="UTF-8">
@@ -56,36 +56,39 @@
       </div>
     </nav>
 
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/img/lost.jpg" class="d-block w-100" alt="...">
+          <img src="/treinobootstrap/img/supernatural capa.jpg" class="d-block w-100" style="max-height: 920px;" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/img/TWD.jpeg" class="d-block w-100" alt="...">
+          <img src="/treinobootstrap/img/BB capa.jpg" class="d-block w-100" style="max-height: 920px;"alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/img/BB.jfif" class="d-block w-100" alt="...">
+          <img src="/treinobootstrap/img/lost capa.jpg" class="d-block w-100" style="max-height: 920px;"alt="...">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-        data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-        data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="container-fluid col-11 m-auto">
-      <div class="row">
-        <div class="col-sm-2" style="margin-left: 20px; margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/HTWM.jfif" class="card-img-top" alt="...">
+    <div class="row col-10 m-auto">
+      <div class="container-fluid navbar col-10 m-auto">
+        <div class="col-2" style=" margin-top:10px; align-items: center;">
+          <div class="card" style="width: 15rem; m-auto;">
+            <img src="/treinobootstrap/img/BB.jfif" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">How to Get Away with Murder</h5>
+              <h5 class="card-title">Breaking bad</h5>
               <p class="card-text"></p>
             </div>
             <ul class="list-group list-group-flush">
@@ -99,27 +102,9 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-2" style="margin-left: 20px;margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto;">
-            <img src="/img/BB2.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Breaking bad<br><br></h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2" style="margin-left: 20px;margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/the good doctor.jfif" class="card-img-top" alt="...">
+        <div class="col-2" style="margin-top: 10px">
+          <div class="card" style="width: 15rem; m-auto">
+            <img src="/treinobootstrap/img/the good doctor.jfif" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">The Good Doctor<br><br></h5>
               <p class="card-text"></p>
@@ -135,11 +120,11 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-2" style="margin-left: 20px; margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/lost2.jfif" class="card-img-top" alt="...">
+        <div class="col-2" style=" margin-top: 10px">
+          <div class="card" style="width: 15rem; m-auto">
+            <img src="/treinobootstrap/img/lost capa.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Lost<br><br></h5>
+              <h5 class="card-title">Lost</h5>
               <p class="card-text"></p>
             </div>
             <ul class="list-group list-group-flush">
@@ -153,10 +138,9 @@
             </div>
           </div>
         </div>
-
-        <div class="col-sm-2" style="margin-left: 20px;margin-top: 10px">
-          <div class="card" style="width: 17rem; m-auto">
-            <img src="/img/supernatural.jfif" class="card-img-top" alt="...">
+        <div class="col-2" style="margin-top: 10px">
+          <div class="card" style="width: 15rem; m-auto">
+            <img src="/treinobootstrap/img/supernatural.jfif" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Supernatural</h5>
               <p class="card-text"></p>
@@ -171,33 +155,34 @@
               <a href="#" class="card-link">Sobre</a>
             </div>
           </div>
-        </div>
-        <div class="col-sm-2" style="margin-left: 20px; margin-top: 10px">
-          <div class="card" style="width: 13rem; m-auto">
-            <img src="/img/HTWM.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">How to Get Away with Murder</h5>
-              <p class="card-text"></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Netflix</li>
-              <li class="list-group-item">6 temporadas</li>
-              <li class="list-group-item">60 episódios</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Assistir</a>
-              <a href="#" class="card-link">Sobre</a>
-            </div>
           </div>
+          <div class="col-2" style="margin-top: 10px">
+            <div class="card" style="width: 15rem; m-auto">
+              <img src="/treinobootstrap/img/HTWM.jfif" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supernatural</h5>
+                <p class="card-text"></p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Netflix</li>
+                <li class="list-group-item">6 temporadas</li>
+                <li class="list-group-item">60 episódios</li>
+              </ul>
+              <div class="card-body">
+                <a href="#" class="card-link">Assistir</a>
+                <a href="#" class="card-link">Sobre</a>
+              </div>
+            </div>
+            </div>
         </div>
-      </div>
+      </div> 
       </main>
     </div>
     <footer class="col-12 navbar-dark bg-dark">
       <input type="button" class="btn btn-warning col-4 m-auto mt-3 d-flex justify-content-center" value="NETFLIX"
-        onclick="window.open('https://https://www.netflix.com/br/','_blank')" style="padding: 10px;">
+        onclick="window.open('https://www.netflix.com/browse')" style="padding: 10px;">
       <input type="button" class="btn btn-warning col-4 m-auto mt-3 d-flex justify-content-center" value="PRIMEVIDEO"
-        onclick="window.open('https://www.primevideo.com/?_encoding=UTF8 language=pt_br','_blank')" padding: 10px;">
+        onclick="window.open('//www.primevideo.com/?_encoding=UTF8 language=pt_br','_blank')" padding: 10px;">
       </div>
     </footer>
 </body>
