--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Atual</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -41,7 +38,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Próximas</a></li>
+                <li><a class="dropdown-item" href="proximas.html">Próximas</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -178,10 +175,10 @@
       </div> 
       </main>
     </div>
-    <footer class="col-12 navbar-dark bg-dark">
+    <footer class="col-12 navbar-dark bg-dark p-1">
       <input type="button" class="btn btn-warning col-4 m-auto mt-3 d-flex justify-content-center" value="NETFLIX"
-        onclick="window.open('https://www.netflix.com/browse')" style="padding: 10px;">
-      <input type="button" class="btn btn-warning col-4 m-auto mt-3 d-flex justify-content-center" value="PRIMEVIDEO"
+        onclick="window.open('https://www.netflix.com/browse')">
+      <input type="button" class="btn btn-warning col-4 m-auto mt-2 mb-3 d-flex justify-content-center" value="PRIMEVIDEO"
         onclick="window.open('//www.primevideo.com/?_encoding=UTF8 language=pt_br','_blank')" padding: 10px;">
       </div>
     </footer>
