--- a/proximas.html
+++ b/proximas.html
@@ -70,14 +70,13 @@
       </div>
 
       <div class="card-body">
-        <div class="row col-6">
-          <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>
-
-            
+        <div class="row">
+          <div class="col-9">
+            <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>  
+          </div>
+        <div class="col-3 d-flex justify-content-right">
+          <img src="/treinobootstrap/img/black list.jpg" class="card-img-top" style="" alt="...">
         </div>
-        <div class="col-3">
-          <img src="/img/black list.jpg" class="card-img-top" style="" alt="...">
-
         </div>
       </div>
 
