--- a/proximas.html
+++ b/proximas.html
@@ -54,7 +54,7 @@
 <body>
   <br><br><br>
   <hr style="color:rebeccapurple ; height: 10px;">
-  <h3 style="display: flex; justify-content: center; ">INTERESSADAS</h3>
+  <h3 style="display: flex; justify-content: center; ">INTERESSES</h3>
   <hr style="color: rebeccapurple; height: 10px;">
   <container class="row-12 d-flex justify-content-center mb-3">  
     <div class="card text-center col-8 mb-2">
@@ -71,7 +71,8 @@
 
       <div class="card-body">
         <div class="row">
-          <div class="col-9">
+          <h4 class="d-flex justify-content-left">Black List</h4>
+          <div class="col-9 d-flex"style=text-align:justify;>
             <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>  
           </div>
         <div class="col-3 d-flex justify-content-right">
@@ -86,59 +87,84 @@
     <div class="card text-center col-8 mb-2">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
-          <li class="nav-item">
-            <a class="nav-link active" href="">Sobre</a>
+          <li class="nav-item" style="margin-right: 3px;">
+            <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="https://www.netflix.com/browse">Assistir agora</a>
+            <a class="nav-link" target="_blank" href="https://www.youtube.com/watch?v=IKtL4IW6G0I&ab_channel=NextEditorial">trailer</a>
           </li>
         </ul>
       </div>
+
       <div class="card-body">
-        <h5 class="card-title d-flex justify-content-left" style="font-size: 25px;">Ponto Cego</h5>
-        <p class="card-text d-flex"style="text-align: justify">Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="row">
+          <h4 class="d-flex justify-content-left">BlindSpot</h4>
+          <div class="col-9 d-flex"style=text-align:justify;>
+            <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>  
+          </div>
+        <div class="col-3 d-flex justify-content-right">
+          <img src="/treinobootstrap/img/blindspot.jpg" class="card-img-top" style="" alt="...">
+        </div>
+        </div>
       </div>
+
     </div>
   </container>
   <container class="row-12 d-flex justify-content-center mb-3">  
     <div class="card text-center col-8 mb-2">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Sobre</a>
+          <li class="nav-item" style="margin-right: 3px;">
+            <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="https://www.netflix.com/browse">Assistir agora</a>
+            <a class="nav-link" target="_blank" href="https://www.youtube.com/watch?v=IKtL4IW6G0I&ab_channel=NextEditorial">trailer</a>
           </li>
         </ul>
       </div>
+
       <div class="card-body">
-        <h5 class="card-title d-flex justify-content-left" style="font-size: 25px;">Good Girls</h5>
-        <p class="card-text d-flex"style="text-align: justify">Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="row">
+          <h4 class="d-flex justify-content-left">Good Girls</h4>
+          <div class="col-9 d-flex"style=text-align:justify;>
+            <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>  
+          </div>
+        <div class="col-3 d-flex justify-content-right">
+          <img src="/treinobootstrap/img/good girls.jpg" class="card-img-top" style="" alt="...">
+        </div>
+        </div>
       </div>
+
     </div>
   </container>
   <container class="row-12 d-flex justify-content-center mb-3">  
     <div class="card text-center col-8 mb-2">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Sobre</a>
+          <li class="nav-item" style="margin-right: 3px;">
+            <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="https://www.netflix.com/browse">Assistir agora</a>
+            <a class="nav-link" target="_blank" href="https://www.youtube.com/watch?v=IKtL4IW6G0I&ab_channel=NextEditorial">trailer</a>
           </li>
         </ul>
       </div>
+
       <div class="card-body">
-        <h5 class="card-title d-flex justify-content-left" style="font-size: 25px;">Á tona</h5>
-        <p class="card-text d-flex"style="text-align: justify">Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="row">
+          <h4 class="d-flex justify-content-left">BlindSpot</h4>
+          <div class="col-9 d-flex"style=text-align:justify;>
+            <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>  
+          </div>
+        <div class="col-3 d-flex justify-content-right">
+          <img src="/treinobootstrap/img/black list.jpg" class="card-img-top" style="" alt="...">
+        </div>
+        </div>
       </div>
+
     </div>
   </container>
+  
 </body>
 <footer class="col-12 navbar-dark bg-dark p-1">
   <input type="button" class="btn btn-warning col-4 m-auto mt-3 d-flex justify-content-center" value="NETFLIX"
